Remove navbar-fixed-top class from menu.jade. Too subjective for basic theme.

--- a/src/jade/partials/menu.jade
+++ b/src/jade/partials/menu.jade
@@ -1,4 +1,4 @@
-nav#menu.navbar.navbar-inverse.navbar-fixed-top.expanded
+nav#menu.navbar.navbar-inverse
   .container
     .navbar-header
       button(type="button", data-toggle="collapse", data-target=".navbar-collapse", aria-expanded="false").navbar-toggle.collapsed
