Update Theme URI in pages\style.css.

--- a/src/static/pages/style.css
+++ b/src/static/pages/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: wp-boilerplate
-Theme URI: http://design-fu.com/themes/wp-boilerplate
+Theme URI: http://design-fu.com/themes/wp-boilerplate.zip
 Author: Design-Fu
 Author URI: http://design-fu.com
 Description: A WordPress starter theme using Gulp, Jade, SASS, es6, Twitter Bootstrap
